[package]
name = "AOC2020"
version = "0.1.0"
authors = ["DRvader <github@ddwr.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "d1_1"
path = "src/bin/1/1.rs"

[[bin]]
name = "d1_2"
path = "src/bin/1/2.rs"
