[package]
name = "AOC2020"
version = "0.1.0"
authors = ["DRvader <github@ddwr.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "d1_1"
path = "src/bin/1/1.rs"

[[bin]]
name = "d1_2"
path = "src/bin/1/2.rs"

[[bin]]
name = "d2_1"
path = "src/bin/2/1.rs"

[[bin]]
name = "d2_2"
path = "src/bin/2/2.rs"

[[bin]]
name = "d3_1"
path = "src/bin/3/1.rs"

[[bin]]
name = "d3_2"
path = "src/bin/3/2.rs"

[[bin]]
name = "d4_1"
path = "src/bin/4/1.rs"

[[bin]]
name = "d4_2"
path = "src/bin/4/2.rs"

[[bin]]
name = "d5_1"
path = "src/bin/5/1.rs"

[[bin]]
name = "d5_2"
path = "src/bin/5/2.rs"

[[bin]]
name = "d6_1"
path = "src/bin/6/1.rs"

[[bin]]
name = "d6_2"
path = "src/bin/6/2.rs"

[[bin]]
name = "d7_1"
path = "src/bin/7/1.rs"

[[bin]]
name = "d7_2"
path = "src/bin/7/2.rs"
